Fixed to dark mode

--- a/src/App.scss
+++ b/src/App.scss
@@ -3,7 +3,7 @@ body.color-scheme-light {
 }
 
 body.color-scheme-dark {
-  background: #070707;
+  background: #171717;
 }
 
 .App {
